--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 env_logger = "0.10.0"
-lazy_static = "1.4.0"
 log = "0.4.17"
 num_cpus = "1.15.0"
+serde = "1.0.152"
+serde_json = "1.0.93"
