--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ clap = { version = "4.1.4", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.17"
 num_cpus = "1.15.0"
-serde = "1.0.152"
+serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
