--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-  "log_level": "info"
+  "log_level": "info",
+  "host" : {
+    "listen_addr": "0.0.0.0:80",
+    "root_folder": "./static"
+  }
 }
