--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "log_level": "info",
   "host": {
-    "listen_addr": "0.0.0.0:80",
-    "root_folder": "./static"
+    "listen_addr": "0.0.0.0",
+    "listen_port": 80,
+    "root_folder": "./static",
+    "not_fount_page": "404.html"
   }
 }
