--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.69"
 chrono = "0.4.23"
 clap = { version = "4.1.4", features = ["derive"] }
+ctrlc = { version = "3.2.5", features = ["termination"] }
 env_logger = "0.10.0"
 log = "0.4.17"
 num_cpus = "1.15.0"
