--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ log = "0.4.17"
 num_cpus = "1.15.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+thiserror = "1.0.39"
