--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ num_cpus = "1.15.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 thiserror = "1.0.39"
+tokio = { version = "1.26.0", features = ["full"] }
