--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper = { version = "1.3.1", features = ["full"] }
+tokio = { version = "1.37.0", features = ["full"] }
+http-body-util = "0.1.1"
+hyper-util = { version = "0.1.3", features = ["full"] }
+# tools
+thiserror = "1.0.59"
+anyhow = "1.0.82"
+# logging
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[profile.release]
+lto = true
+panic = "abort"   # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+# opt-level = "s"   # Optimize for binary size
+strip = true # Remove debug symbols
