--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ hyper-util = { version = "0.1.3", features = ["full"] }
 # tools
 thiserror = "1.0.59"
 anyhow = "1.0.82"
+config = { version = "0.14.0", default-features = false, features = [
+  "async",
+  "toml",
+] }
+serde = "1.0.198"
+serde_derive = "1.0.198"
 # logging
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
