--- a/config.example.toml
+++ b/config.example.toml
@@ -1,1 +1,9 @@
-port = "4000"
+[[host]]
+ip = "0.0.0.0"
+port = 4000
+index = "index.html"
+[host.route]
+# route path: GET /
+location = "/"
+# static file path
+root = "./html"
