--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ http-body-util = "0.1.1"
 hyper-util = { version = "0.1.3", features = ["full"] }
 # tools
 thiserror = "1.0.59"
-# anyhow = "1.0.82"
+anyhow = "1.0.82"
 config = { version = "0.14.0", default-features = false, features = [
   "async",
   "toml",
@@ -22,6 +22,7 @@ toml = "0.8.12"
 # logging
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+futures-util = "0.3.30"
 
 [profile.release]
 lto = true
