--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ toml = "0.8.12"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-util = "0.3.30"
+tokio-util = "0.7.10"
 
 [profile.release]
 lto = true
