--- a/config.example.toml
+++ b/config.example.toml
@@ -3,6 +3,8 @@ ip = "0.0.0.0"
 port = 4000
 # index file name and format
 index = ["index.html"]
+# http keep alive timeout
+keep-alive-time = 75
 [[host.route]]
 # route path: GET /
 location = "/"
