--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-util = "0.3.30"
 tokio-util = "0.7.10"
-md5 = "0.7.0"
+async-compression = { version = "0.4.9", features = ["tokio", "zstd"] }
 
 [profile.release]
 lto = true
