--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-util = "0.3.30"
 tokio-util = "0.7.10"
 async-compression = { version = "0.4.9", features = ["tokio", "zstd"] }
+http = "1.1.0"
 
 [profile.release]
 lto = true
