--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-util = "0.3.30"
 tokio-util = "0.7.11"
-async-compression = { version = "0.4.9", features = ["tokio", "zstd", "gzip"] }
+async-compression = { version = "0.4.10", features = ["tokio", "zstd", "gzip", "deflate", "brotli"] }
 http = "1.1.0"
 
 [profile.release]
