--- a/config.example_full.toml
+++ b/config.example_full.toml
@@ -1,5 +1,8 @@
 # mime
 default-type = "application/octet-stream"
+# add mime types
+[types]
+wasm = "application/wasm"
 [[host]]
 ip = "0.0.0.0"
 port = 4000
