--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,11 +17,22 @@ before_script:
     - echo "[source.ustc]" >> $HOME/.cargo/config
     - echo "registry = \"sparse+https://mirrors.ustc.edu.cn/crates.io-index/\"" >> $HOME/.cargo/config
     - mkdir public
+    - cargo install cross --git https://github.com/cross-rs/cross
 
 test:
     stage: test
     script:
         - cargo test
+
+build:freebsd:
+    stage: build
+    script:
+        - apt-get update -y
+        - apt-get install -y musl-tools libssl-dev
+        - rustup target add x86_64-unknown-freebsd
+        - cross build --release --target x86_64-unknown-freebsd
+        - "mv target/release/$APP_NAME target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG"
+        - "mv target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG public/"
 
 build:linux-gnu-amd64:
     stage: build
