--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ build:freebsd:
         - apt-get update -y
         - apt-get install -y musl-tools libssl-dev docker.io
         - rustup target add x86_64-unknown-freebsd
+        - docker ps
         - cross build --release --target x86_64-unknown-freebsd
         - "mv target/release/$APP_NAME target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG"
         - "mv target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG public/"
