--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 variables:
     APP_NAME: "candy"
-    GIT_CLONE_PATH: "$CI_BUILDS_DIR/$CI_PROJECT_NAME/$CI_PIPELINE_ID"
+    # GIT_CLONE_PATH: "$CI_BUILDS_DIR/$CI_PROJECT_NAME/$CI_PIPELINE_ID"
 
 image: "rust:latest"
 
@@ -28,8 +28,9 @@ build:freebsd:
     stage: build
     script:
         - apt-get update -y
-        - apt-get install -y musl-tools libssl-dev
+        - apt-get install -y musl-tools libssl-dev docker.io
         - rustup target add x86_64-unknown-freebsd
+        - docker ps
         - cross build --release --target x86_64-unknown-freebsd
         - "mv target/release/$APP_NAME target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG"
         - "mv target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG public/"
