--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,8 +11,7 @@ env:
 
 jobs:
     build:
-        runs-on: ["self-hosted", "ubuntu-latest"]
-        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - uses: actions/checkout@v4
