--- a/docs/package.json
+++ b/docs/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "start-zh": "docusaurus start --locale zh-Hans",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
+    "write-translations-zh": "docusaurus write-translations --locale zh-Hans",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
