add tracing instrument
remove nightly

--- a/config.example_full.toml
+++ b/config.example_full.toml
@@ -15,15 +15,15 @@ index = ["index.html"]
 location = "/"
 root = "./html"
 [host.route.error_page]
-status = 500
+status = 404
 page = "404.html"
 
 [[host.route]]
 index = ["index.html"]
-location = "/www/"
-root = "./html"
+location = "/candy/"
+root = "./docs/build"
 [host.route.error_page]
-status = 500
+status = 404
 page = "404.html"
 
 [[host.route]]
