--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,29 +7,35 @@ edition = "2021"
 
 [dependencies]
 hyper = { version = "1.3.1", features = ["full"] }
-tokio = { version = "1.37.0", features = ["full"] }
-http-body-util = "0.1.1"
-hyper-util = { version = "0.1.3", features = ["full"] }
+tokio = { version = "1.38.0", features = ["full"] }
+http-body-util = "0.1.2"
+hyper-util = { version = "0.1.5", features = ["full"] }
 # tools
-thiserror = "1.0.60"
-anyhow = "1.0.83"
+thiserror = "1.0.61"
+anyhow = "1.0.86"
 config = { version = "0.14.0", default-features = false, features = [
-  "async",
-  "toml",
+    "async",
+    "toml",
 ] }
-serde = { version = "1.0.201", features = ["derive"] }
-toml = "0.8.12"
+serde = { version = "1.0.203", features = ["derive"] }
+toml = "0.8.14"
 # logging
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-util = "0.3.30"
 tokio-util = "0.7.11"
-async-compression = { version = "0.4.10", features = ["tokio", "zstd", "gzip", "deflate", "brotli"] }
+async-compression = { version = "0.4.11", features = [
+    "tokio",
+    "zstd",
+    "gzip",
+    "deflate",
+    "brotli",
+] }
 http = "1.1.0"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.7", features = ["derive"] }
 
 [profile.release]
 lto = true
 panic = "abort"   # Strip expensive panic clean-up logic
 codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-strip = true # Remove debug symbols
+strip = true      # Remove debug symbols
