--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "1.3.1", features = ["full"] }
+# core
 tokio = { version = "1.38.0", features = ["full"] }
-http-body-util = "0.1.2"
-hyper-util = { version = "0.1.5", features = ["full"] }
-# tools
-thiserror = "1.0.61"
-anyhow = "1.0.86"
-config = { version = "0.14.0", default-features = false, features = [
-    "async",
-    "toml",
-] }
-serde = { version = "1.0.203", features = ["derive"] }
-toml = "0.8.14"
-# logging
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-futures-util = "0.3.30"
 tokio-util = "0.7.11"
+hyper = { version = "1.3.1", features = ["full"] }
+hyper-util = { version = "0.1.5", features = ["full"] }
+http = "1.1.0"
+http-body-util = "0.1.2"
+futures-util = "0.3.30"
 async-compression = { version = "0.4.11", features = [
     "tokio",
     "zstd",
@@ -31,7 +21,14 @@ async-compression = { version = "0.4.11", features = [
     "deflate",
     "brotli",
 ] }
-http = "1.1.0"
+# tools
+thiserror = "1.0.61"
+anyhow = "1.0.86"
+serde = { version = "1.0.203", features = ["derive"] }
+toml = "0.8.14"
+# logging
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 clap = { version = "4.5.7", features = ["derive"] }
 
 [profile.release]
