--- a/config.example_full.toml
+++ b/config.example_full.toml
@@ -5,7 +5,7 @@ wasm = "application/wasm"
 [[host]]
 ip = "0.0.0.0"
 port = 4000
-keep_alive = 15
+timeout = 15
 
 [host.headers]
 X-Powered-By = "candy"
