--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,10 @@ stages:
 variables:
     APP_NAME: "candy"
     # GIT_CLONE_PATH: "$CI_BUILDS_DIR/$CI_PROJECT_NAME/$CI_PIPELINE_ID"
+    # use for much faster builds
+    DOCKER_DRIVER: overlay2
+    # ensure cross knows it's running remotely
+    CROSS_REMOTE: 1
 
 image: "rust:latest"
 
@@ -30,8 +34,6 @@ build:freebsd:
         - apt-get update -y
         - apt-get install -y musl-tools libssl-dev docker.io
         - rustup target add x86_64-unknown-freebsd
-        - docker ps
-        - export CROSS_CONTAINER_IN_CONTAINER=true
         - cross build --release --target x86_64-unknown-freebsd
         - "mv target/release/$APP_NAME target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG"
         - "mv target/release/$APP_NAME-x86_64-unknown-freebsd-$CI_COMMIT_TAG public/"
