--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,16 @@ async-compression = { version = "0.4.18", features = [
     "deflate",
     "brotli",
 ] }
+# ssl
+rustls = { version = "0.23.19" }
+tokio-rustls = "0.26.0"
+hyper-rustls = "0.27.3"
 # tools
 thiserror = "2.0.3"
 anyhow = "1.0.93"
 serde = { version = "1.0.215", features = ["derive"] }
 toml = "0.8.19"
+bytes = "1.8.0"
 # logging
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
