--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ version = "0.1.1"
 edition = "2021"
 rust-version = "1.80.0"
 
+[features]
+ring = ["rustls/ring"]
+aws-lc-rs = ["rustls/aws-lc-rs"]
+default = ["ring"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -25,7 +30,11 @@ async-compression = { version = "0.4.18", features = [
     "brotli",
 ] }
 # ssl
-rustls = { version = "0.23.23" }
+rustls = { version = "0.23.23", default-features = false, features = [
+    "logging",
+    "std",
+    "tls12",
+] }
 tokio-rustls = "0.26.1"
 hyper-rustls = "0.27.5"
 # tools
