--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 rust-version = "1.80.0"
 
 [features]
-ring = ["rustls/ring"]
-aws-lc-rs = ["rustls/aws-lc-rs"]
+ring = ["rustls/ring", "tokio-rustls/ring", "hyper-rustls/ring"]
+aws-lc-rs = [
+    "rustls/aws-lc-rs",
+    "tokio-rustls/aws-lc-rs",
+    "hyper-rustls/aws-lc-rs",
+]
 default = ["ring"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -35,8 +39,16 @@ rustls = { version = "0.23.23", default-features = false, features = [
     "std",
     "tls12",
 ] }
-tokio-rustls = "0.26.1"
-hyper-rustls = "0.27.5"
+tokio-rustls = { version = "0.26.1", default-features = false, features = [
+    "logging",
+    "tls12",
+] }
+hyper-rustls = { version = "0.27.5", default-features = false, features = [
+    "logging",
+    "tls12",
+    "native-tokio",
+    "http1",
+] }
 # tools
 thiserror = "2.0.11"
 anyhow = "1.0.96"
