--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,27 +19,28 @@ default = ["ring"]
 
 [dependencies]
 # core
-tokio = { version = "1.43.0", features = ["full"] }
-tokio-util = "0.7.13"
+tokio = { version = "1.44.1", features = ["full"] }
+tokio-util = "0.7.14"
 hyper = { version = "1.6.0", features = ["full"] }
 hyper-util = { version = "0.1.10", features = ["full"] }
-http = "1.2.0"
-http-body-util = "0.1.2"
+http = "1.3.1"
+http-body-util = "0.1.3"
 futures-util = "0.3.31"
-async-compression = { version = "0.4.18", features = [
+async-compression = { version = "0.4.22", features = [
     "tokio",
     "zstd",
     "gzip",
     "deflate",
     "brotli",
 ] }
+mimalloc = "0.1.44"
 # ssl
-rustls = { version = "0.23.23", default-features = false, features = [
+rustls = { version = "0.23.25", default-features = false, features = [
     "logging",
     "std",
     "tls12",
 ] }
-tokio-rustls = { version = "0.26.1", default-features = false, features = [
+tokio-rustls = { version = "0.26.2", default-features = false, features = [
     "logging",
     "tls12",
 ] }
@@ -50,15 +51,15 @@ hyper-rustls = { version = "0.27.5", default-features = false, features = [
     "http1",
 ] }
 # tools
-thiserror = "2.0.11"
-anyhow = "1.0.96"
-serde = { version = "1.0.218", features = ["derive"] }
+thiserror = "2.0.12"
+anyhow = "1.0.97"
+serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.20"
-bytes = "1.10.0"
+bytes = "1.10.1"
 # logging
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-clap = { version = "4.5.31", features = ["derive"] }
+clap = { version = "4.5.33", features = ["derive"] }
 rustls-pemfile = "2.2.0"
 
 [profile.dev]
