--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,6 @@ version = "0.1.1"
 edition = "2021"
 rust-version = "1.80.0"
 
-[features]
-ring = ["rustls/ring", "tokio-rustls/ring", "hyper-rustls/ring"]
-aws-lc-rs = [
-    "rustls/aws-lc-rs",
-    "tokio-rustls/aws-lc-rs",
-    "hyper-rustls/aws-lc-rs",
-]
-default = ["ring"]
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -26,30 +17,10 @@ hyper-util = { version = "0.1.10", features = ["full"] }
 http = "1.3.1"
 http-body-util = "0.1.3"
 futures-util = "0.3.31"
-async-compression = { version = "0.4.22", features = [
-    "tokio",
-    "zstd",
-    "gzip",
-    "deflate",
-    "brotli",
-] }
 mimalloc = "0.1.44"
-# ssl
-rustls = { version = "0.23.25", default-features = false, features = [
-    "logging",
-    "std",
-    "tls12",
-] }
-tokio-rustls = { version = "0.26.2", default-features = false, features = [
-    "logging",
-    "tls12",
-] }
-hyper-rustls = { version = "0.27.5", default-features = false, features = [
-    "logging",
-    "tls12",
-    "native-tokio",
-    "http1",
-] }
+axum = { version = "0.8.1" }
+tower = { version = "0.5.2", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["full"] }
 # tools
 thiserror = "2.0.12"
 anyhow = "1.0.97"
@@ -59,8 +30,7 @@ bytes = "1.10.1"
 # logging
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-clap = { version = "4.5.33", features = ["derive"] }
-rustls-pemfile = "2.2.0"
+clap = { version = "4.5.34", features = ["derive"] }
 
 [profile.dev]
 incremental = true          # Compile your binary in smaller steps.
