--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ http = "1.3.1"
 http-body-util = "0.1.3"
 futures-util = "0.3.31"
 mimalloc = "0.1.44"
-axum = { version = "0.8.1" }
+axum = { version = "0.8.3", features = ["macros"] }
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 # tools
@@ -30,6 +30,8 @@ bytes = "1.10.1"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 clap = { version = "4.5.34", features = ["derive"] }
+serde_repr = "0.1.20"
+serde_json = "1.0.140"
 
 [profile.dev]
 incremental = true          # Compile your binary in smaller steps.
