--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 clap = { version = "4.5.34", features = ["derive"] }
 serde_repr = "0.1.20"
 serde_json = "1.0.140"
+mime_guess = "2.0.5"
 
 [profile.dev]
 incremental = true          # Compile your binary in smaller steps.
