feat(http): enhance error handling and config clarity
- Refactored `serve.rs` loop for robustness (tries all paths before failing).
- Improved error messages in `error.rs` for better debugging.
- Updated `config.rs` and `config.example_full.toml` to reflect new defaults.
- Added debug logs for failed path attempts in file serving.

--- a/config.example_full.toml
+++ b/config.example_full.toml
@@ -29,6 +29,9 @@ location = "/"
 # Static file root
 root = "./html"
 [host.route.error_page]
+status = 500
+page = "500.html"
+[host.route.not_found_page]
 status = 404
 page = "404.html"
 
