--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ serde_repr = "0.1.20"
 serde_json = "1.0.140"
 mime_guess = "2.0.5"
 
+[dev-dependencies]
+tempfile = "3.19.1"
+
 [profile.dev]
 incremental = true          # Compile your binary in smaller steps.
 rustflags = ["-Zthreads=8"] # Better compile performance.
