--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ http-body-util = "0.1.3"
 futures-util = "0.3.31"
 mimalloc = "0.1.46"
 axum = { version = "0.8.3", features = ["macros"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 # tools
