--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ toml = "0.8.20"
 bytes = "1.10.1"
 const_format = "0.2.34"
 md5 = "0.7.0"
+dashmap = { version = "6.1.0", features = ["serde"] }
 # logging
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
