feat(reverse_proxy): add basic proxy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ axum-extra = { version = "0.10.1", features = ["typed-header"] }
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.4", features = ["full"] }
+reqwest = { version = "0.12.18", features = ["stream"] }
 # tools
 thiserror = "2.0.12"
 anyhow = "1.0.98"
