--- a/.github/workflows/macos-arm.yml
+++ b/.github/workflows/macos-arm.yml
@@ -1,10 +1,10 @@
 name: Candy macOS arm
 
-# on:
-#   push:
-#     branches: ["main"]
-#   pull_request:
-#     branches: ["main"]
+on:
+  push:
+    branches: [""]
+  pull_request:
+    branches: [""]
 
 env:
   CARGO_TERM_COLOR: always
