--- a/config.example_full.toml
+++ b/config.example_full.toml
@@ -1,9 +1,3 @@
-# Default file type for unknow file
-default_type = "application/octet-stream"
-# Custom MIME types
-[types]
-wasm = "application/wasm"
-
 # Virtual host
 [[host]]
 ip = "0.0.0.0"
@@ -11,6 +5,8 @@ port = 4000
 # Connection timeout
 timeout = 15
 # SSL certificate
+# ssl enable
+# ssl = true
 # Self sign a certificate
 # sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout ./html/selfsigned.key -out ./html/selfsigned.crt
 certificate = "./html/selfsigned.crt"
