--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ clap = { version = "4.5.39", features = ["derive"] }
 serde_repr = "0.1.20"
 serde_json = "1.0.140"
 mime_guess = "2.0.5"
+chrono = "0.4.41"
 
 [dev-dependencies]
 tempfile = "3.20.0"
