--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-cargo-features = ["profile-rustflags", "trim-paths"]
+# cargo-features = ["profile-rustflags", "trim-paths"]
 
 [package]
 name = "candy"
@@ -13,17 +13,17 @@ tokio = { version = "1.45.1", features = ["full"] }
 tokio-util = "0.7.15"
 tokio-rustls = "0.26.2"
 hyper = { version = "1.6.0", features = ["full"] }
-hyper-util = { version = "0.1.13", features = ["full"] }
+hyper-util = { version = "0.1.14", features = ["full"] }
 http = "1.3.1"
 http-body-util = "0.1.3"
 futures-util = "0.3.31"
-mimalloc = "0.1.46"
+mimalloc = "0.1.47"
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 tower = { version = "0.5.2", features = ["full"] }
-tower-http = { version = "0.6.5", features = ["full"] }
-reqwest = { version = "0.12.18", features = [
+tower-http = { version = "0.6.6", features = ["full"] }
+reqwest = { version = "0.12.20", features = [
     # "rustls-tls",
     "native-tls-vendored",
     "zstd",
@@ -36,7 +36,7 @@ reqwest = { version = "0.12.18", features = [
 thiserror = "2.0.12"
 anyhow = "1.0.98"
 serde = { version = "1.0.219", features = ["derive"] }
-toml = "0.8.22"
+toml = "0.8.23"
 bytes = "1.10.1"
 const_format = "0.2.34"
 md5 = "0.7.0"
@@ -44,7 +44,7 @@ dashmap = { version = "6.1.0", features = ["serde"] }
 # logging
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-clap = { version = "4.5.39", features = ["derive"] }
+clap = { version = "4.5.40", features = ["derive"] }
 serde_repr = "0.1.20"
 serde_json = "1.0.140"
 mime_guess = "2.0.5"
@@ -54,14 +54,14 @@ chrono = "0.4.41"
 tempfile = "3.20.0"
 
 [profile.dev]
-incremental = true          # Compile your binary in smaller steps.
-rustflags = ["-Zthreads=8"] # Better compile performance.
+incremental = true # Compile your binary in smaller steps.
+# rustflags = ["-Zthreads=8"] # Better compile performance.
 
 [profile.release]
-codegen-units = 1                                                           # Allows LLVM to perform better optimization.
-lto = true                                                                  # Enables link-time-optimizations.
-opt-level = 3                                                               # Prioritizes small binary size. Use `3` if you prefer speed.
-panic = "abort"                                                             # Higher performance by disabling panic handlers.
-strip = true                                                                # Ensures debug symbols are removed.
-trim-paths = "all"                                                          # Removes potentially privileged information from your binaries.
-rustflags = ["-Cdebuginfo=0", "-C", "target-cpu=native", "-Z", "threads=8"]
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true        # Enables link-time-optimizations.
+opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
+panic = "abort"   # Higher performance by disabling panic handlers.
+strip = true      # Ensures debug symbols are removed.
+# trim-paths = "all" # Removes potentially privileged information from your binaries.
+# rustflags = ["-Cdebuginfo=0", "-C", "target-cpu=native", "-Z", "threads=8"]
