--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2024"
 
 [dependencies]
 # core
-tokio = { version = "1.46.1", features = ["full"] }
+tokio = { version = "1.47.0", features = ["full"] }
 tokio-util = "0.7.15"
 tokio-rustls = "0.26.2"
 hyper = { version = "1.6.0", features = ["full"] }
-hyper-util = { version = "0.1.15", features = ["full"] }
+hyper-util = { version = "0.1.16", features = ["full"] }
 http = "1.3.1"
 http-body-util = "0.1.3"
 futures-util = "0.3.31"
@@ -33,7 +33,7 @@ reqwest = { version = "0.12.22", features = [
     "stream",
 ] }
 # lua
-mlua = { version = "0.10.5", features = [
+mlua = { version = "0.11.1", features = [
     "lua54",
     "vendored",
     "send",
@@ -56,9 +56,10 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 clap = { version = "4.5.41", features = ["derive"] }
 serde_repr = "0.1.20"
-serde_json = "1.0.140"
+serde_json = "1.0.141"
 mime_guess = "2.0.5"
 chrono = "0.4.41"
+tracing-appender = "0.2.3"
 
 [dev-dependencies]
 tempfile = "3.20.0"
