--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ edition = "2024"
 # core
 tokio = { version = "1.47.0", features = ["full"] }
 tokio-util = "0.7.15"
-tokio-rustls = "0.26.2"
+# tokio-rustls = "0.26.2"
 hyper = { version = "1.6.0", features = ["full"] }
-hyper-util = { version = "0.1.16", features = ["full"] }
+# hyper-util = { version = "0.1.16", features = ["full"] }
 http = "1.3.1"
-http-body-util = "0.1.3"
-futures-util = "0.3.31"
+# http-body-util = "0.1.3"
+# futures-util = "0.3.31"
 mimalloc = "0.1.47"
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
@@ -47,7 +47,7 @@ thiserror = "2.0.12"
 anyhow = "1.0.98"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.9.2"
-bytes = "1.10.1"
+# bytes = "1.10.1"
 const_format = "0.2.34"
 md5 = "0.8.0"
 dashmap = { version = "6.1.0", features = ["serde"] }
@@ -56,7 +56,7 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 clap = { version = "4.5.41", features = ["derive"] }
 serde_repr = "0.1.20"
-serde_json = "1.0.141"
+# serde_json = "1.0.141"
 mime_guess = "2.0.5"
 chrono = "0.4.41"
 tracing-appender = "0.2.3"
