--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2024"
 anyhow = "1.0.100"
 axum = { version = "0.8.8", features = ["macros"] }
 axum-extra = { version = "0.12.5", features = ["typed-header"] }
-axum-server = { version = "0.7.3", features = ["tls-rustls"] }
+axum-server = { version = "0.8.0", features = ["tls-rustls"] }
 chrono = "0.4.43"
 clap = { version = "4.5.54", features = ["derive"] }
 const_format = "0.2.35"
@@ -31,13 +31,13 @@ mlua = { version = "0.11.5", features = [
     "serialize",
     "vendored",
 ] }
-reqwest = { version = "0.12.28", default-features = false, features = [
+reqwest = { version = "0.13.1", default-features = false, features = [
     "brotli",
     "charset",
     "deflate",
     "gzip",
     "http2",
-    "rustls-tls",
+    "rustls",
     "stream",
     "system-proxy",
     # "native-tls-vendored",
