--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ mlua = { version = "0.11.5", optional = true, features = [
     "vendored",
 ] }
 notify = "8.2.0"
+futures = "0.3.30"
 reqwest = { version = "0.13.1", default-features = false, features = [
     "brotli",
     "charset",
