--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "candy"
 version = "0.2.4"
 edition = "2024"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [features]
 default = ["all"]
 all = ["lua"]
@@ -20,7 +18,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 const_format = "0.2.35"
 dashmap = { version = "6.1.0", features = ["serde"] }
 http = "1.4.0"
-hyper = { version = "1.8.1", features = ["full"] }
+hyper = { version = "1.8.1", features = ["http1", "http2", "server", "client"] }
 md5 = "0.8.0"
 mimalloc = "0.1.48"
 mime_guess = "2.0.5"
@@ -53,11 +51,23 @@ serde_repr = "0.1.20"
 # tools
 thiserror = "2.0.18"
 # core
-tokio = { version = "1.49.0", features = ["full"] }
+tokio = { version = "1.49.0", features = [
+    "rt-multi-thread",
+    "time",
+    "signal",
+    "macros",
+] }
 tokio-util = "0.7.18"
 toml = "0.9.11"
-tower = { version = "0.5.3", features = ["full"] }
-tower-http = { version = "0.6.8", features = ["full"] }
+tower = { version = "0.5.3", features = ["util", "filter", "limit"] }
+tower-http = { version = "0.6.8", features = [
+    "compression-br",
+    "compression-deflate",
+    "compression-gzip",
+    "compression-zstd",
+    "timeout",
+    "trace",
+] }
 # logging
 tracing = "0.1.44"
 tracing-appender = "0.2.4"
