--- a/examples/config.example.toml
+++ b/examples/config.example.toml
@@ -53,3 +53,22 @@ server = [
     { server = "http://api2.example.com", weight = 3 },
     { server = "http://api3.example.com", weight = 1 }
 ]
+
+# Example of ip_hash load balancing for session persistence
+[[host]]
+ip = "0.0.0.0"
+port = 8083
+server_name = "session.example.com"
+[[host.route]]
+location = "/app"
+upstream = "session_servers"
+proxy_timeout = 30
+
+[[upstream]]
+name = "session_servers"
+method = "ip_hash"
+server = [
+    { server = "192.168.1.102:8080", weight = 1 },
+    { server = "192.168.1.103:8080", weight = 1 },
+    { server = "192.168.1.104:8080", weight = 1 }
+]
