feat(lua): 实现 Lua 代码缓存功能
  - 添加 `lua_code_cache` 配置选项，默认为 true
  - 实现 Lua 脚本编译结果的缓存机制
  - 支持脚本内容变化检测和自动重新编译
  - 添加缓存管理方法：`clear_cache()`,
  `remove_from_cache()`
  - 实现缓存统计功能：`cache_stats()`,
  `print_cache_stats()`
  - 优化缓存命中和失效时的错误处理
  - 添加详细的调试日志和执行时间测量
  - 在配置和示例中添加文档说明

--- a/examples/config.example.toml
+++ b/examples/config.example.toml
@@ -98,3 +98,13 @@ server = [
 ]
 # Health check configuration
 health_check = { interval = 3000, fall = 3, rise = 2, type = "http", check_http_send = "HEAD / HTTP/1.0\r\n\r\n", check_http_expect_alive = "200-399" }
+
+# Example: Route with Lua script and disabled code cache (for development/debugging)
+[[host]]
+ip = "0.0.0.0"
+port = 8084
+server_name = "lua.example.com"
+[[host.route]]
+location = "/lua"
+lua_script = "./examples/hello.lua"
+lua_code_cache = false  # Disable Lua code cache for debugging purposes
